[package]
name = "egui-toast"
description = "Toast notifications for the egui library"
version = "0.4.0"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
edition = "2021"

license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/urholaukkarinen/egui-toast"
repository = "https://github.com/urholaukkarinen/egui-toast"
categories = ["gui"]
keywords = ["egui", "toast", "notification"]

[dependencies]
egui = { path = "/home/ingo/git/extern/ingodsp-egui/crates/egui" }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dev-dependencies]
eframe = { path = "/home/ingo/git/extern/ingodsp-egui/crates/eframe", features = ["dark-light"] }
