[package]
name = "egui-toast"
description = "Toast notifications for the egui library"
version = "0.10.1"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
edition = "2021"

license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/urholaukkarinen/egui-toast"
repository = "https://github.com/urholaukkarinen/egui-toast"
categories = ["gui"]
keywords = ["egui", "toast", "notification"]

[dependencies]
egui = { git = 'https://github.com/ingo-dsp/egui.git', branch = "develop-ingo-2" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
